--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     color: rgba(255, 255, 255, 0.87);
     background-color: #000000;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Press Start 2P', Arial, Helvetica, sans-serif;
 }
 
 #app {
